# 3-laba

./: CMakeLists.txt  README.md
include/: Hexagon.h
src/: Array.cpp  Hexagon.cpp  Octagon.cpp  Pentagon.cpp  main.cpp
tests/: test.cpp
